--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
                         <a class="nav-link text-white" href="#">Sobre</a>
@@ -67,16 +67,16 @@
             <div class="container text-center">
                 <h1>Raissa Barata</h1>
                 <h3 class="font-italic font-weight-light">Desenvolvedora front-end</h3>
-                <div class="d-flex justify-content-around redes-sociais mt-4">
-                    <a href="" target="_blank">
+                <div class="d-flex flex-column  flex-lg-row justify-content-around  redes-sociais mt-4">
+                    <a class="mb-3" href="" target="_blank">
                         <i class="fab fa-github-alt"></i>
-                        <span >github.com/nome</span>
+                        <span>github.com/nome</span>
                     </a>
-                    <a href="" target="_blank">
+                    <a class="mb-3" href="" target="_blank">
                         <i class="fab fa-linkedin"></i>
                         <span>linkedin.com/nome</span>
                     </a>
-                    <a href="" target="_blank">
+                    <a class="mb-3" href="" target="_blank">
                         <i class="fas fa-envelope"></i>
                         <span>nome@gmail.com</span>
                     </a>
@@ -86,58 +86,168 @@
     </header>
 
     <!-- seções - habilidades e sobre -->
-    <section>
-        <h3>Habilidades</h3>
-        <div>
-            <i class="fab fa-html5"></i>
-            <p>HTML</p>
-        </div>
-        <div>
-            <i class="fab fa-css3-alt"></i>
-            <p>CSS</p>
-        </div>
-        <div>
-            <i class="fab fa-js"></i>
-            <p>JavaScript</p>
-        </div>
-        <div>
-            <i class="fab fa-sass"></i>
-            <p>Sass</p>
-        </div>
-        <div>
-            <i class="fas fa-book"></i>
-            <p>jQuery</p>
-        </div>
-        <div>
-            <i class="fab fa-react"></i>
-            <p>React</p>
-        </div>
-        <div>
-            <i class="fab fa-bootstrap"></i>
-            <p>Bootstrap</p>
-        </div>
-        <div>
-            <i class="fab fa-git-alt"></i>
-            <p>Git</p>
-        </div>
-        <div>
-            <i class="fas fa-tasks"></i>
-            <p>Scrum</p>
+    <section class=" d-flex flex-column flex-md-row bg-roxo align-items-center container-fluid text-center text-white ">
+
+        <div class=" container d-flex  flex-column p-4 col-lg-3">
+            <div class="mt-3 mb-3">
+                <h3>Habilidades</h3>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <i class="fab fa-html5 "></i>
+                    <p>HTML</p>
+                </div>
+                <div class="col">
+                    <i class="fab fa-css3-alt"></i>
+                    <p>CSS</p>
+                </div>
+                <div class="col">
+                    <i class="fab fa-js"></i>
+                    <p>JavaScript</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <i class="fab fa-sass"></i>
+                    <p>Sass</p>
+                </div>
+                <div class="col">
+                    <i class="fas fa-book"></i>
+                    <p>jQuery</p>
+                </div>
+                <div class="col">
+                    <i class="fab fa-react"></i>
+                    <p>React</p>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col">
+                    <i class="fab fa-bootstrap"></i>
+                    <p>Bootstrap</p>
+                </div>
+                <div class="col">
+                    <i class="fab fa-git-alt"></i>
+                    <p>Git</p>
+                </div>
+                <div class="col">
+                    <i class="fas fa-tasks"></i>
+                    <p>Scrum</p>
+                </div>
+            </div>
         </div>
 
-        <section>
-            <h3>Sobre</h3>
-            <p>Aluna do <span>bootcamp de front-end</span> da {reprograma}.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit facere ea aperiam modi
-                magni asperiores? <span>Impedit qui saepe necessitatibus exercitationem </span> Impedit qui saepe
-                necessitatibus exercitationem debitis perspiciatis ex. Porro ut iste.</p>
-            <p>Outras áreas de interesse: <span>metodologias ágeis, UX, Python, Clojure</span>.</p>
+        <section class="p-3 col-lg-6">
+            <div class=" container ">
+                <h3>Sobre</h3>
+
+                <p>Aluna do <span>bootcamp de front-end</span> da {reprograma}.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit facere ea aperiam
+                    modi
+                    magni asperiores? <span>Impedit qui saepe necessitatibus exercitationem </span> Impedit qui saepe
+                    necessitatibus exercitationem debitis perspiciatis ex. Porro ut iste.</p>
+                <p>Outras áreas de interesse: <span>metodologias ágeis, UX, Python, Clojure</span>.</p>
+            </div>
         </section>
+
     </section>
 
     <!-- cards - meus projetos -->
-    <section>
-        <h3>Portfólio</h3>
+    <section class=" py-4 container text-center ">
+        <h3 class="mb-4">Portfólio</h3>
+        <div class="row justify-content-around">
+            <!-- =====Card 01====== -->
+            <div class="card tamanho-card">
+                <img class="card-img-top imagem-card" src="./assets/images/modal-01.png" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card</h5>
+                    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
+                        conteúdo do card.</p>
+                    <a href="#" data-target="#modal01" data-toggle="modal" class="btn btn-primary">Visitar</a>
+                </div>
+            </div>
+            <!-- ======modal 01====== -->
+            <div class="modal" tabindex="-1" role="dialog" id="modal01">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Título do modal</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Texto do corpo do modal, é aqui.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <button type="button" class="btn btn-primary">Salvar mudanças</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ========card 02======= -->
+            <div class="card tamanho-card">
+                <img class="card-img-top imagem-card" src="./assets/images/modal-02.png" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card</h5>
+                    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
+                        conteúdo do card.</p>
+                    <a href="#" data-target="#modal02" data-toggle="modal" class="btn btn-primary">Visitar</a>
+                </div>
+            </div>
+            <!-- ======modal 02======= -->
+            <div class="modal" tabindex="-1" role="dialog" id="modal02">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Título do modal</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Texto do corpo do modal, é aqui.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <button type="button" class="btn btn-primary">Salvar mudanças</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- =======card 03========= -->
+            <div class="card tamanho-card">
+                <img class="card-img-top imagem-card" src="./assets/images/modal-03.png" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <h5 class="card-title">Título do card</h5>
+                    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
+                        conteúdo do card.</p>
+                    <a href="#" data-target="#modal03" data-toggle="modal" class="btn btn-primary">Visitar</a>
+                </div>
+            </div>
+            <!-- =======modal 03====== -->
+            <div class="modal" tabindex="-1" role="dialog" id="modal03">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Título do modal</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Texto do corpo do modal, é aqui.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <button type="button" class="btn btn-primary">Salvar mudanças</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- cards -->
         <!-- modais -->
         <img src="./assets/images/modal-01.jpg" alt="">
@@ -146,8 +256,8 @@
     </section>
 
     <!-- footer -->
-    <footer>
-        <small>Desenvolvido com Bootstrap por Nome enquanto aluna da<span><a href="http://reprograma.com.br/index.html"
+    <footer class="bg-roxo text-center text-white py-2">
+        <small>Desenvolvido com Bootstrap por Raissa Barata enquanto aluna da<span><a href="http://reprograma.com.br/index.html"
                     target="_blank">{reprograma}</a></span> 2019</small>
     </footer>
 
